# admob-mcp

./: .env.example  .gitignore  .mcp.json  README.md  admob_api.py  auth.py  auth_flow.py  pyproject.toml  requirements.txt  server.py
.claude/: settings.local.json
docs/: admob-api-gaps.md
examples/: admob-mcp.service  claude_desktop_config.json  com.admob-mcp.plist
